# 2DThreePen

./: .gitignore  AGENTS.md  LICENSE  README.md  bull.js  index.html  main.py  package-lock.json  package.json  script.js  solutions.js  solutions.json  tsconfig.json  vite.config.js
.github/workflows/: main.yml
assets/: bullpen_bg-Uh2ZIhH9.wasm  index-B9HGB1YO.js  index-BlkTSWS0.js  index-ByFxqI-2.css  index-C9UmUqRo.js  index-wKaSYAs5.js  p5-69j6VmgO.js
bullpen/: Cargo.toml
bullpen/src/: lib.rs
research/: algox.py  bullpen_hint.py  compare_stats.py  gen2.py  gendouble.py  gensingle.py  main.py  makecap.py  maker.py  maker_flood.py  maker_preplace.py  puzzle.dat.py  solutions.json  solver.py
research/experiments/: runtime.ipynb
research/expt/: runtime.ipynb
src/: bull.js  bullpen.ts  genpen.ts  main.ts  script.js  solver.js  solver.ts
src/jsold/: bull.js  solutions.js
wasm/: Cargo.toml  README.md
wasm/src/: cell.rs  gen_single.rs  genpenai.rs  lib.rs  llist.rs  main.rs  matrix.rs  single_solver.rs  solver.rs
