[package]
name = "bullpen"
version = "0.1.0"
authors = ["Junhao Zhang <jerry_mountain@hotmail.com>"]
edition = "2021"

[[bin]]
name = "run"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
fastrand = { version = "2.4.1", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size (WASM binary).
opt-level = "s"
lto = true
codegen-units = 1

# Speed-optimized profile for native benchmarking:
#   cargo run --profile fast --bin run
# lto=true lets fastrand's RNG calls inline across the crate boundary.
[profile.fast]
inherits = "release"
opt-level = 3
